remove uneeded logic
